Further fleshing out of the Safaricom M-PESA integration.
    - [ADD] payroll_gateway - generic payroll gateway framework
    - [ADD] payroll_gateway_mpesa_et - rename of hr_payroll_safaricom_et

--- a/payroll_gateway_mpesa_et/views/hr_payslip_view.xml
+++ b/payroll_gateway_mpesa_et/views/hr_payslip_view.xml
@@ -12,10 +12,10 @@
             <page name="accounting" position="after">
                 <page name="mpesa_et" string="M-PESA (ET)">
                     <group name="response" string="API Response">
-                        <field name="safaricom_et_payment_response"/>
+                        <field name="mpesa_et_payment_response"/>
                     </group>
                     <group name="result" string="Transaction Result">
-                        <field name="safaricom_et_payment_result"/>
+                        <field name="mpesa_et_payment_result"/>
                     </group>
                 </page>
             </page>
