Further fleshing out of the Safaricom M-PESA integration.
    - [REN] payroll_gateway -> payroll_processor
    - [REN] payroll_gateway_mpesa_et - payroll_processor_mpesa_et
    - Many miscellaneous changes, including web controllers for processeng callbacks from the MPESA API

--- a/payroll_processor/views/menus.xml
+++ b/payroll_processor/views/menus.xml
@@ -2,7 +2,7 @@
 <odoo>
     <menuitem
         id="payroll_menu_gateways"
-        name="Gateways"
+        name="Processors"
         parent="payroll.payroll_menu_configuration"
         sequence="100"
         groups="payroll.group_payroll_manager"
