Renaming any remaining *_gateway -> *_processor

--- a/payroll_processor/views/hr_employee_view.xml
+++ b/payroll_processor/views/hr_employee_view.xml
@@ -9,7 +9,7 @@
             <xpath expr="//page[@name='public']" position="after">
                 <page name="payroll" string="Payroll" groups="hr.group_hr_user">
                     <group>
-                        <field name="payroll_payment_gateway" />
+                        <field name="payroll_payment_processor" />
                     </group>
                 </page>
             </xpath>
