--- a/payroll_processor/views/res_config_settings_view.xml
+++ b/payroll_processor/views/res_config_settings_view.xml
@@ -9,14 +9,14 @@
             <xpath expr="//div[@id='require_code_and_category']" position="after">
                 <div
                     class="row mt16 o_settings_container"
-                    id="payroll_payment_gateway"
+                    id="payroll_payment_processor"
                 >
                     <div class="col-lg-6 col-12 o_setting_box">
                         <div class="o_setting_left_pane">
                         </div>
                         <div class="o_setting_right_pane">
-                            <label for="payroll_payment_gateway" />
-                            <field name="payroll_payment_gateway" />
+                            <label for="payroll_payment_processor" />
+                            <field name="payroll_payment_processor" />
                             <div class="text-muted">
                                 Default payroll payment processor
                             </div>
