--- a/payroll_processor/views/hr_employee_view.xml
+++ b/payroll_processor/views/hr_employee_view.xml
@@ -2,7 +2,7 @@
 <odoo>
 
     <record id="hr_employee_view_form_inherit" model="ir.ui.view">
-        <field name="name">hr.employee.form.payroll_gateway</field>
+        <field name="name">hr.employee.form.payroll_processor</field>
         <field name="model">hr.employee</field>
         <field name="inherit_id" ref="hr.view_employee_form" />
         <field name="arch" type="xml">
