--- a/payroll_processor/views/res_config_settings_view.xml
+++ b/payroll_processor/views/res_config_settings_view.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
     <record id="res_config_settings_view_form" model="ir.ui.view">
-        <field name="name">res.config.settings.view.form.inherit.payroll_gateway</field>
+        <field name="name">res.config.settings.view.form.inherit.payroll_processor</field>
         <field name="model">res.config.settings</field>
         <field name="priority" eval="70"/>
         <field name="inherit_id" ref="payroll.res_config_settings_view_form"/>
